feat: openAPI code generation